--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <a href="e4/index.html" title="Sitemap"> Sitemap </a><br>
     <a href="e5/index.html" title="Wireframe"> Wireframe </a><br>
     <h2>Projects</h2>
-    <a href="p1/Justin Bieber Holy.html" title="Project 1"> Project 1 </a>
+    <a href="p1/index.html/Justin Bieber Holy.html" title="Project 1"> Project 1 </a>
   </body>
 </html>
