--- a/p1/index.html/Lyrics9.html
+++ b/p1/index.html/Lyrics9.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>On <a href = "Justin Bieber HOLY.html" title= "god"> god </a></h1>
+    <h1>On <a href = "justinbieberholy.html" title= "god"> god </a></h1>
   </body>
 </html>
