--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <h1> Phillip Nguyen's Work</h1>
     <h2>Exercises</h2>
     <a href="e1/index.html" title="20 Questions"> 20 Questions </a><br>
-    <a href="e2/index.html" title="Grids and Shapes"> Grids and Shapes </a>
+    <a href="e2/index.html" title="Grids and Shapes"> Grids and Shapes </a><br>
+    <a href="e3/index.html" title="Naming and Organizing"> Naming and Organizing </a><br>
+    <a href="e4/index.html" title="Sitemap"> Sitemap </a><br>
+    <a href="e5/index.html" title="Wireframe"> Wireframe </a><br>
     <h2>Projects</h2>
-    <a href="p1/Justin Bieber Holy.html" title="Project 1"> Project 1 </a>
+    <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a>
   </body>
 </html>
