--- a/p1/index.html/Lyrics2.html
+++ b/p1/index.html/Lyrics2.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1> I hear a lot about <a href = "Lyrics3.html" title= "Sinners"> sinners </a></h1>
