--- a/p1/index.html/Lyrics6.html
+++ b/p1/index.html/Lyrics6.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1>Yeah, it's makin' me <a href = "Lyrics7.html" title= "say"> say </a></h1>
