--- a/e4/index.html
+++ b/e4/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>E4</title>
+    <title>e4</title>
   </head>
   <body>
-      <h2>E4</h2>
+      <h2>e4</h2>
       <img src="one.png" alt="Sitemap">
   </body>
 </html>
