--- a/p1/index.html/Lyrics3.html
+++ b/p1/index.html/Lyrics3.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1>Don't think that I'll be a <a href = "Lyrics4.html" title= "saint"> saint </a></h1>
