--- a/p1/index.html/Lyrics5.html
+++ b/p1/index.html/Lyrics5.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1>'Cause the way that the sky opens up when we <a href = "Lyrics6.html" title= "touch"> touch </a></h1>
