--- a/p1/index.html/Lyrics7.html
+++ b/p1/index.html/Lyrics7.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1>That the way you <a href = "Lyrics8.html" title= "hold me, hold me, hold me, hold me, hold me"> hold me, hold me, hold me, hold me, hold me </a></h1>
