--- a/p1/index.html/Lyrics8.html
+++ b/p1/index.html/Lyrics8.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1>Feels so  <a href = "Lyrics9.html" title= "holy, holy, holy, holy, holy"> holy, holy, holy, holy, holy </a></h1>
