--- a/p1/index.html/Lyrics9.html
+++ b/p1/index.html/Lyrics9.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+      <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1>On <a href = "justinbieberholy.html" title= "god"> god </a></h1>
