--- a/p1/index.html/justinbieberholy.html
+++ b/p1/index.html/justinbieberholy.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HOLY</title>
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <h1> <a href = "Lyrics2.html" title= "HOLY"> HOLY </a> </h1>
