--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <a href="e3/index.html" title="Naming and Organizing"> Naming and Organizing </a><br>
     <a href="e4/index.html" title="Sitemap"> Sitemap </a><br>
     <a href="e5/index.html" title="Wireframe"> Wireframe </a><br>
+    <a href="e6/index.html" title="Type on Screen 1"> Type on Screen 1 </a><br>
+
     <h2>Projects</h2>
     <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a>
   </body>
