--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="e4/index.html" title="Sitemap"> Sitemap </a><br>
     <a href="e5/index.html" title="Wireframe"> Wireframe </a><br>
     <a href="e6/index.html" title="Type on Screen 1"> Type on Screen 1 </a><br>
+    <a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br>
 
     <h2>Projects</h2>
     <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a>
