--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br>
     <a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br>
     <h2>Projects</h2>
-    <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a>
+    <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a><br>
     <a href="p2/index.html" title="Project 2"> Project 2 </a>
   </body>
 </html>
