--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <a href="e6/index.html" title="Type on Screen 1"> Type on Screen 1 </a><br>
     <a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br>
     <a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br>
+    <a href="e9/index.html" title="Patterns"> Patterns </a><br>
     <h2>Projects</h2>
     <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a><br>
-    <a href="p2/index.html" title="Project 2"> Project 2 </a>
+    <a href="p2.3/index.html" title="Project 2"> Project 2 </a>
   </body>
 </html>
