--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>E1</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1> Phillip Nguyen's Work</h1>
+    <h1> Phillip Nguyen's Work </h1>
     <h2>Exercises</h2>
     <a href="e1/index.html" title="20 Questions"> 20 Questions </a><br>
     <a href="e2/index.html" title="Grids and Shapes"> Grids and Shapes </a><br>
