--- a/index.html
+++ b/index.html
@@ -3,22 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>E1</title>
+    <link href="http://fonts.googleapis.com/css2?family=lato:wght@300;400;700&family=Space+Mano:wght@400;700&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
+    <header>
     <h1> Phillip Nguyen's Work </h1>
+    </header>
+    <main>
+      <div class="col">
+        <ul>
     <h2>Exercises</h2>
-    <a href="e1/index.html" title="20 Questions"> 20 Questions </a><br>
-    <a href="e2/index.html" title="Grids and Shapes"> Grids and Shapes </a><br>
-    <a href="e3/index.html" title="Naming and Organizing"> Naming and Organizing </a><br>
-    <a href="e4/index.html" title="Sitemap"> Sitemap </a><br>
-    <a href="e5/index.html" title="Wireframe"> Wireframe </a><br>
-    <a href="e6/index.html" title="Type on Screen 1"> Type on Screen 1 </a><br>
-    <a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br>
-    <a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br>
-    <a href="e9/index.html" title="Patterns"> Patterns </a><br>
+    <li><a href="e1/index.html" title="20 Questions"> 20 Questions </a><br></li>
+    <li><a href="e2/index.html" title="Grids and Shapes"> Grids and Shapes </a><br></li>
+    <li><a href="e3/index.html" title="Naming and Organizing"> Naming and Organizing </a><br></li>
+    <li><a href="e4/index.html" title="Sitemap"> Sitemap </a><br></li>
+    <li><a href="e5/index.html" title="Wireframe"> Wireframe </a><br></li>
+    <li><a href="e6/index.html" title="Type on Screen 1"> Type on Screen 1 </a><br></li>
+    <li><a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br></li>
+    <li><a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br></li>
+    <li><a href="e9/index.html" title="Patterns"> Patterns </a><br></li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul>
     <h2>Projects</h2>
-    <a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a><br>
-    <a href="p2.3/index.html" title="Project 2.3"> Project 2.3 </a>
+    <li><a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a><br></li>
+    <li><a href="p2.3/index.html" title="Project 2.3"> Project 2.3 </a></li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
