--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <h2>Projects</h2>
     <li><a href="p1/index.html/justinbieberholy.html" title="Project 1"> Project 1 </a><br></li>
     <li><a href="p2.3/index.html" title="Project 2.3"> Project 2.3 </a></li>
+    <li><a href="p2.4/index.html" title="Project 2.4"> Project 2.4 </a></li>
         </ul>
       </div>
     </main>
