--- a/e10/contact/index.html
+++ b/e10/contact/index.html
@@ -15,7 +15,7 @@
       <hr>
       <h2>Link #5</h2>
       <p>Write the correct path to get the deer image to display in the image element and then write the correct path to get to the doe page in the anchor element around the image.</p>
-      <a class="img-link" href="deer-portrait.jpg"><img src="deer-portrait.jpg" alt="deer-portrait.jpg"></a>
+      <a class="img-link" href="../doe/index.html"><img src="deer-portrait.jpg" alt="../doe/index.html"></a>
     </main>
   </body>
 </html>
