--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <li><a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br></li>
     <li><a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br></li>
     <li><a href="e9/index.html" title="Patterns"> Patterns </a><br></li>
-    <li><a href="e10/index.html" title="Linking"> Linking </a><br></li>
         </ul>
       </div>
       <div class="col">
@@ -33,7 +32,12 @@
     <li><a href="p2.3/index.html" title="Project 2.3"> Project 2.3 </a></li>
     <li><a href="p2.4/index.html" title="Project 2.4"> Project 2.4 </a></li>
     <li><a href="p2.5/index.html" title="Project 2.5"> Project 2.5 </a></li>
-        
+        </ul>
+      </div>
+      <div class="col">
+        <ul>
+    <h2>Tutorials</h2>
+    <li><a href="e10/index.html" title="Linking"> Linking </a><br></li>
         </ul>
       </div>
     </main>
