--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="col">
         <ul>
     <h2>Tutorials</h2>
-    <li><a href="e10/index.html" title="Linking"> Linking </a><br></li>
+    <li><a href="linking/index.html" title="Linking"> Linking </a><br></li>
         </ul>
       </div>
     </main>
