--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <li><a href="e7/index.html" title="seven-principles.txt"> Seven-principles.txt </a><br></li>
     <li><a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br></li>
     <li><a href="e9/index.html" title="Patterns"> Patterns </a><br></li>
+    <li><a href="e10/index.html" title="Layouts"> Layouts </a><br></li>
         </ul>
       </div>
       <div class="col">
