--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <li><a href="e8/index.html" title="Visualizing Responsiveness"> Visualizing Responsiveness </a><br></li>
     <li><a href="e9/index.html" title="Patterns"> Patterns </a><br></li>
     <li><a href="e10/index.html" title="Layouts"> Layouts </a><br></li>
+    <li><a href="e11/index.html" title="CSS Drawing"> CSS Drawing </a><br></li>
         </ul>
       </div>
       <div class="col">
