--- a/p2 final/index.html
+++ b/p2 final/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>p2.4</title>
+    <title>p2final</title>
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
