--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <li><a href="p2.3/index.html" title="Project 2.3"> Project 2.3 </a></li>
     <li><a href="p2.4/index.html" title="Project 2.4"> Project 2.4 </a></li>
     <li><a href="p2.5/index.html" title="Project 2.5"> Project 2.5 </a></li>
+    <li><a href="p2 final/index.html" title="Project 2"> Project 2 </a></li>
+
         </ul>
       </div>
       <div class="col">
