--- a/e11/index.html
+++ b/e11/index.html
@@ -11,11 +11,18 @@
     <div class="middle"></div>
     <div class="bottom"></div>
 
+    <div class="nose"></div>
+
     <div class="lefteye"></div>
     <div class="righteye"></div>
 
     <div class="leftarm"></div>
     <div class="rightarm"></div>
+
+    <div class="topbutton"></div>
+    <div class="middlebutton"></div>
+    <div class="bottombutton"></div>
+
 
   </body>
 </html>
