--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <li><a href="e9/index.html" title="Patterns"> Patterns </a><br></li>
     <li><a href="e10/index.html" title="Layouts"> Layouts </a><br></li>
     <li><a href="e11/index.html" title="CSS Drawing"> CSS Drawing </a><br></li>
+    <li><a href="e15/index.html" title="Drawing"> Drawing </a><br></li>
         </ul>
       </div>
       <div class="col">
@@ -35,7 +36,6 @@
     <li><a href="p2.4/index.html" title="Project 2.4"> Project 2.4 </a></li>
     <li><a href="p2.5/index.html" title="Project 2.5"> Project 2.5 </a></li>
     <li><a href="p2 final/index.html" title="Project 2"> Project 2 </a></li>
-
         </ul>
       </div>
       <div class="col">
