--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>E1</title>
+    <title>Class Web</title>
     <link href="http://fonts.googleapis.com/css2?family=lato:wght@300;400;700&family=Space+Mano:wght@400;700&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="main.css">
   </head>
